--- a/styles/styles.css
+++ b/styles/styles.css
@@ -155,6 +155,9 @@ nav a {
     padding: 10px 25px;
     border-radius: 10px;
     color: darkgray;
+    border: none;
+    background-color: rgb(80, 80, 80);
+    opacity: 0.8;
 }
 
 #video-card {
@@ -165,8 +168,13 @@ nav a {
     height: 90px;
 }
 
+.video-card-title-container{
+    margin-top: -25px;
+    margin-right: -25px;
+}
+
 #card-title-1 {
-    color: black;
+    color: white;
     font-size: 1.5rem;
     font-weight: 700;
 }
@@ -174,11 +182,11 @@ nav a {
 .ball {
     background-color: orangered;
     border-radius: 50%;
-    width: 20px;
-    height: 20px;
+    width: 30px;
+    height: 30px;
     position: relative;
-    left: -10px;
-    top: 21px;
+    left: -12px;
+    top: 7px;
 }
 
 #Workout-card {
@@ -188,7 +196,7 @@ nav a {
 }
 
 #card-title-2 {
-    color: black;
+    color: white;
     font-size: 1.5rem;
     font-weight: 800;
 }
