--- a/styles/styles.css
+++ b/styles/styles.css
@@ -169,7 +169,7 @@ nav a {
 }
 
 .video-card-title-container{
-    margin-top: -25px;
+    margin-top: -50px;
     margin-right: -25px;
 }
 
@@ -187,6 +187,17 @@ nav a {
     position: relative;
     left: -12px;
     top: 7px;
+}
+
+.triangle-right{
+    width: 0px;
+    height: 0px;
+    border-top: 10px solid transparent;
+    border-left: 12px solid white;
+    border-bottom: 10px solid transparent;
+    position: relative;
+    left: -1px;
+    top: -18px;
 }
 
 #Workout-card {
